--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ telethon = "^1.38.1"
 pydantic-settings = "^2.7.1"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
+loguru = "^0.7.3"
+validators = "^0.34.0"
 
 [tool.poetry.dev-dependencies]
 black = "^24.8.0"
