--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 loguru = "^0.7.3"
 validators = "^0.34.0"
+pytz = "^2025.1"
+pre-commit = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^24.8.0"
