--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ loguru = "^0.7.3"
 validators = "^0.34.0"
 pytz = "^2025.1"
 pre-commit = "^4.1.0"
+sqlalchemy = "^2.0.40"
+asyncio = "^3.4.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
