--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pytz = "^2025.1"
 pre-commit = "^4.1.0"
 sqlalchemy = "^2.0.40"
 asyncio = "^3.4.3"
+asyncpg = "^0.30.0"
+greenlet = "^3.1.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
