--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0.40"
 asyncio = "^3.4.3"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
+alembic = "^1.15.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
