--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+[project]
+requires-python = ">=3.10"
 [tool.poetry]
 name = "backend-academy-2024-python-template"
 version = "0.1.0"
@@ -21,6 +23,7 @@ asyncio = "^3.4.3"
 asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 alembic = "^1.15.2"
+testcontainers = "^4.10.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
