--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ asyncpg = "^0.30.0"
 greenlet = "^3.1.1"
 alembic = "^1.15.2"
 testcontainers = "^4.10.0"
+pytest-asyncio = "^0.26.0"
+anyio = "^4.9.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
