--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ alembic = "^1.15.2"
 testcontainers = "^4.10.0"
 pytest-asyncio = "^0.26.0"
 anyio = "^4.9.0"
+aiokafka = "^0.12.0"
+confluent-kafka = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
