--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-[project]
-requires-python = ">=3.10"
 [tool.poetry]
 name = "backend-academy-2024-python-template"
 version = "0.1.0"
@@ -28,6 +26,8 @@ pytest-asyncio = "^0.26.0"
 anyio = "^4.9.0"
 aiokafka = "^0.12.0"
 confluent-kafka = "^2.10.0"
+redis = "^6.1.0"
+kafka = "^1.3.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
