--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,23 @@ BOT_API_ID=
 BOT_API_HASH=
 BOT_TOKEN=
 
-API_HOST_SERVER=
-API_PORT_SERVER= 
-API_PREFIX_SERVER=
+SCRAPPER_GITHUB_TOKEN=
+SCRAPPER_BATCH_SIZE = 2
+SCRAPPER_BODY_MAX_LEN = 200
+SCRAPPER_TITLE_MAX_LEN = 100
+
+
+API_HOST_SERVER = 
+API_PORT_SERVER = 
 
 DB_URL=
 DB_ECHO=
+
+APP_KAFKA_BOOTSTRAP_SERVERS=
+APP_KAFKA_SECURITY_PROTOCOL=
+APP_KAFKA_SASL_MECHANISM=
+APP_KAFKA_SASL_USERNAME=
+APP_KAFKA_SASL_PASSWORD=
+
+
+PYTHONPATH=$PYTHONPATH
